mise a jour des logo

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <!-- Image -->
         <div class="relative reveal">
           <div class="rounded-3xl overflow-hidden border border-slate-100 dark:border-slate-800 ring-glow tilt bg-white dark:bg-slate-900">
-            <img src="D:\mes projets\mon portfolio\zoc_bleu.jpg" aria-placeholder="logo" loading="lazy" />
+            <img src="logos/moi_logo.png" aria-placeholder="logo" loading="lazy" />
           </div>
         </div>
       </div>
@@ -320,7 +320,7 @@
       <!-- Image / Carte contact -->
       <div class="lg:col-span-1 reveal">
         <div class="rounded-3xl overflow-hidden border border-slate-100 dark:border-slate-800 ring-glow">
-          <img src="D:\mes projets\mon portfolio\IMG-cv.jpg" alt="Portrait créatif" class="w-full h-80 object-cover" loading="lazy" />
+          <img src="IMG-cv.jpg" alt="Portrait créatif" class="w-full h-80 object-cover" loading="lazy" />
         </div>
         <ul class="mt-6 space-y-2 text-sm text-slate-700 dark:text-slate-300">
           <li><span class="text-slate-500 dark:text-slate-400">Mobile :</span> +237 6 97 24 63 59</li>
